# submit-kernel-without-abi-cxx11

./: CMakeLists.txt  README.md  demo.cpp
cmake/: FindIntelSYCL.cmake
